--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
