--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
-    "@babel/preset-flow": "^7.10.4",
-    "babel-jest": "^26.1.0",
-    "jest": "^26.1.0"
+    "@babel/preset-flow": "^7.10.4"
   }
 }
